  * chdist:
    + Symlink, rather than copy, the archive keyrings into the chdist tree so
      they don't get stale.  (Closes: #783497)
  * test_package_lifecycle: Ignore listing of dh_* commands in debuild output.
    The specific commands aren't interesting, so much as the steps that the
    build goes through.  Fixes FTBFS due to new dh_update_autotools_config
    command.  (Closes: #812661)

  [ Christoph Berg ]
  * debcheckout: Add auth mapping for https://github.com.

  [ Osamu Aoki ]
  * uscan:
    - Fix regressions and glitches in the prioritizing mechanism of packages.
      (Closes: #809604)
    - Fix regressions of the verbosety. (Closes: #809541, #809554)
    - Keep the original compressed file when decompressing it for the
      signature verification. (Closes: #812860)

  [ Dominique Dumont ]
  * licensecheck:
    + detect LGPL license in Perl files handled by Dist::Zilla

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 05 Jan 2016 13:01:05 -0200

devscripts (2.15.10) unstable; urgency=low

  [ Benjamin Drung ]
  * test_uscan: Fix failure in testFileExclusion due to wrong tarfile name
    test on Ubuntu.

  [ Nicholas Bamber ]
  * Fixed issues with current bash completion (Closes: #804492)
    + Reorganised scripts/Makefile so that bash completion scripts
      are installed matching their command names - an exception being the
      generic pkgnames.bash_completion.
    + Where necessary added links to bash completion scripts
      to debian/links to reuse bash completion code
    + Removed deprecated "have" mechanism from bash completion scripts.
    + Removed undefined "$filenames" from chdist.bash_completion
    + Split debi.bash_completion off from pkgnames.bash_completion
      and added links for both debi/debc and corrected complete commands
  * Added custom bash completion support for bts (Closes: #499886)
    + Added --soap-timeout option to bts
    + Added listcachedbugs command to bts